Add admin role management and user role assignment
- Introduced FIRST_ADMIN_EMAIL in .env.example to set the first admin account during registration and login.
- Updated user registration and login routes to assign the admin role if the first admin email matches and no admins exist.
- Modified the user model to include a role field, defaulting to 'user'.
- Enhanced the Admin Dashboard navigation to reflect 'Users & Roles' instead of 'Customers'.
- Implemented role handling in session management and user retrieval functions.

These changes streamline the admin setup process and improve user role management in the application.

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,11 @@ DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 # Get from: Vercel Dashboard → Storage → your Blob store → .env.local tab
 BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxxxxxxxxx
 
+# ──── Admin bootstrap (optional) ─────────────────────
+# Email of first admin. When this user registers or logs in and no admins exist, they become admin.
+# Use to set up your first admin account.
+FIRST_ADMIN_EMAIL=admin@satelitegroup.com
+
 # ──── Payments (optional — only if using Paystack card payments) ────
 # Get keys from https://dashboard.paystack.com/ → Settings → API Keys
 NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY=pk_live_xxxxxxxxxxxx
